fix(back): add swagger for remove order
