# config/packages/nelmio_api_doc.yaml
@@ -759,6 +759,79 @@ nelmio_api_doc:
                         type: string
                         description: Result of the action
                         example: success
+      /api/v1/orders/{order_id}:
+        delete:
+          tags:
+          - Experiencer
+          summary: Remove an order.
+          security:
+          - jwt: []
+          description: 'An authenticated experience can remove his/her order.
+
+            '
+          parameters:
+          - name: order_id
+            required: true
+            in: path
+            description: 'The id of the order to remove.
+
+              '
+            schema:
+              type: integer
+          responses:
+            '200':
+              description: The order is removed successfully.
+              content:
+                application/json:
+                  schema:
+                    type: object
+                    properties:
+                      data:
+                        type: array
+                        items:
+                          type: string
+                          description: always an empty array.
+                        example: []
+                      message:
+                        type: string
+                        description: Order Removed Successfully.
+                        example: Order Removed Successfully.
+                      status:
+                        type: string
+                        description: Result of the action
+                        example: success
+            '400':
+              description: The requested experience does not exist.
+              content:
+                application/json:
+                  schema:
+                    type: object
+                    properties:
+                      status:
+                        type: string
+                        description: Result of the action
+                        example: failed
+                      message:
+                        type: string
+                        description: A description about failure.
+                        example: Object not found
+            '403':
+              description: The user has not sufficient permission to access this end
+                point.
+              content:
+                application/json:
+                  schema:
+                    type: object
+                    properties:
+                      status:
+                        type: string
+                        description: Result of the action
+                      message:
+                        type: string
+                        description: A description about failure.
+                    example:
+                      status: failed
+                      message: AUTHORIZATION FAILED
   areas:
     default:
       path_patterns:
